--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-script-launcher": "~0.1.0",
     "karma-webpack": "^1.5.0",
     "load-grunt-tasks": "~0.6.0",
+    "node-sass": "^3.7.0",
     "react-hot-loader": "^1.0.7",
     "sass-loader": "^1.0.1",
     "style-loader": "~0.8.0",
